[NTP] Automated test that FileSelected updates last selected directory

Writing a test for the new feature remembering the last selected
directory for user. This unit test is for CL:
1162712:[NTP] Upload file from the most recent directory

Bug: 871703
Change-Id: I18769a34ae360ff9b51241178c0e9ffdfd6f8c29
Reviewed-on: https://chromium-review.googlesource.com/1171880
Reviewed-by: Kristi Park <kristipark@chromium.org>
Commit-Queue: Weilun Shi <sweilun@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582660}
Former-commit-id: 4ff86943b83c3239b574da4271a7312f0dbff9a5